#3 ExploitDetectionService - needs to add detection mechanism

--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "test": "hardhat test",
     "deploy": "hardhat run scripts/deploy.ts",
     "monitor:build": "tsc -p tsconfig.monitor.json",
-    "monitor:start": "node dist/monitor/monitor/index.js"
+    "monitor:start": "node dist/monitor/monitor/index.js",
+    "start": "ts-node src/microservices/index.ts",
+    "build": "tsc",
+    "serve": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
